--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,13 @@
 version: 2.1
-orbs:
-  dotnet-tools: bwp-orbs/dotnet-tools@30.0.0
+# orbs:
+#   dotnet-tools: bwp-orbs/dotnet-tools@30.0.0
   
+orbs:
+win: circleci/windows@2.2.0
+
 jobs:
-  build:
-    docker:
-      - image: mcr.microsoft.com/dotnet/core/sdk:1.1
-      - image: mcr.microsoft.com/dotnet/core/sdk:1.3
-      - image: mcr.microsoft.com/dotnet/core/sdk:2.0
+    build:
+     executor: win/default 
     
     steps:
       - checkout
